--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
     <style>
         body, html {
-
+            margin: 0;
+            padding: 0;
             overflow: hidden;
         }
     </style>
